src/envoy/envoy.yaml
# more /etc/envoy/envoy.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          scheme_header_transformation:
            scheme_to_overwrite: https
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              cors:
                allow_origin_string_match:
                - prefix: "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: "*"
              domains: ["*"]
              routes:
              - match:
                  prefix: "/tiles/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/v1.0/invoke/tilesapi/method/"
                  cluster: dapr              
              - match:
                  prefix: "/tiles"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/v1.0/invoke/tilesapi/method/"
                  cluster: dapr              
              - match:
                  prefix: "/mosaics"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/v1.0/invoke/mosaicapi/method/"
                  cluster: dapr              
              - match:
                  prefix: "/mosaics/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/v1.0/invoke/mosaicapi/method/"
                  cluster: dapr              
              - match:
                  prefix: "/"
                route:
                  host_rewrite_literal: www.envoyproxy.io
                  cluster: service_envoyproxy_io
          http_filters:
          - name: envoy.filters.http.cors
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: dapr
    type: strict_dns
    load_assignment:
      cluster_name: dapr
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 3500
  - name: service_envoyproxy_io
    connect_timeout: 30s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_envoyproxy_io
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.envoyproxy.io
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: www.envoyproxy.io
